--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import './utils/variables';
+@import './utils/mixin';
 @import './base/common';
 @import './base/container';
 @import './utils/visually-hidden';
