--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -5,20 +5,14 @@
 }
 .modal-form-head {
   font-family: var(--main-font);
-  font-weight: var(--main-font-weight);
-  font-size: 20px;
-  line-height: 1.15;
+   @include font(20px, 400, 1.15);
   text-align: center;
-  letter-spacing: 0.03em;
   color: var(--title-color);
   margin-bottom: 12px;
 }
 .modal-form-field {
   font-family: var(--main-font);
-  font-weight: var(--secondary-font-weight);
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
+   @include font(12px, 400, 1.17, 0.01em);
   color: var(--text-color);
   margin-bottom: 10px;
 }
@@ -74,10 +68,7 @@
   display: flex;
   align-items: center;
   font-family: var(--main-font);
-  font-weight: var(--secondary-font-weight);
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
+   @include font(14px, 400, 1.71);
   color: var(--text-color);
   margin-bottom: 30px;
   margin-top: 10px;
@@ -126,11 +117,8 @@
   border-radius: 4px;
   border: none;
   font-family: var(--main-font);
-  font-weight: var(--main-font-weight);
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-  color: #ffffff;
+   @include font(16px, 400, 1.87, 0.06em);
+   color: #ffffff;
   cursor: pointer;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background 250ms cubic-bezier(0.4, 0, 0.2, 1);
