--- a/sass/layout/_about-us.scss
+++ b/sass/layout/_about-us.scss
@@ -9,34 +9,28 @@
   border-radius: 4px;
 }
 
-.about-item {
+.advantages__list {
   display: flex;
   flex-wrap: wrap;
   margin-left: -30px;
   margin-top: -10px;
 }
-.advantages {
+.advantages__item {
   flex-basis: calc((100% - 120px) / 4);
   margin-left: 30px;
   margin-top: 10px;
 }
-.about-us {
+.advantages_subtitle {
   margin-bottom: 10px;
   font-family: var(--main-font);
-  font-weight: var(--main-font-weight);
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
+  @include font(14px, 700, 1.14);
   text-transform: uppercase;
   text-align: left;
   color: var(--title-color);
 }
-.about-us-desc {
+.advantages__desc {
   font-family: var(--main-font);
-  font-weight: var(--secondary-font-weight);
-  font-size: 14px;
-  letter-spacing: 0.03em;
-  line-height: 1.71;
+  @include font(14px, 400, 1.71, 0.03em);
   text-align: left;
   color: var(--text-color);
 }
