--- a/sass/layout/_footer-follow.scss
+++ b/sass/layout/_footer-follow.scss
@@ -11,10 +11,7 @@
 
 .follow-head {
   font-family: var(--main-font);
-  font-weight: var(--main-font-weight);
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
+  @include font(14px, 700);
   text-transform: uppercase;
   color: #ffffff;
   margin-bottom: 20px;
@@ -40,12 +37,9 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   font-family: var(--main-font);
-  font-weight: var(--main-font-weight);
-  font-size: 16px;
-  line-height: 1.87;
-  text-align: center;
-  letter-spacing: 0.06em;
-  color: #ffffff;
+   @include font(16px, 700, 1.87, 0.06em);
+   text-align: center;
+   color: #ffffff;
   border: none;
   transform: background 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
