--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -18,7 +18,7 @@
 .current {
   position: relative;
 }
-.nav-link.current::after {
+.nav__link.current::after {
   position: absolute;
   content: '';
   display: block;
@@ -40,31 +40,25 @@
   margin-right: 87px;
 }
 .logo,
-.logo-item {
+.logo__item {
   font-family: var(--secondary-font);
-  font-weight: var(--main-font-weight);
-  font-size: 26px;
-  letter-spacing: 0.03em;
-  line-height: 1.19;
+  @include font(26px, 700, 1.19);
   color: #000000;
   text-align: left;
 }
 
-.logo-item {
+.logo__item {
   color: var(--accent-color);
 }
 
 /* Navigation */
-.nav-item:not(:last-child) {
+.nav__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.nav-link {
+.nav__link {
   font-family: var(--main-font);
-  font-weight: 500;
-  font-size: 14px;
-  letter-spacing: 0.02em;
-  line-height: 1.14;
+  @include font(14px, 500, 1.14, 0.02em);
   color: var(--title-color);
   text-align: left;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -74,7 +68,7 @@
     color: var(--accent-color);
   }
 }
-.contact-list {
+.contact {
   display: flex;
   margin-left: auto;
 }
@@ -89,15 +83,12 @@
   fill: currentColor;
 }
 
-.contact-link {
+.contact__link {
   display: flex;
   align-items: center;
   font-family: var(--main-font);
   color: var(--text-color);
-  font-weight: 500;
-  font-size: 14px;
-  letter-spacing: 0.02em;
-  line-height: 1.14;
+  @include font(14px, 500, 1.2, 0.02em);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
