--- a/sass/layout/_our-team.scss
+++ b/sass/layout/_our-team.scss
@@ -19,19 +19,13 @@
 .subtitle-photo-name {
   margin-bottom: 10px;
   font-family: var(--main-font);
-  font-weight: 500;
-  font-size: 16px;
-  letter-spacing: 0.03em;
-  line-height: 1.18;
+  @include font(16px, 500, 1.18);
   text-align: center;
   color: var(--title-color);
 }
 .position {
   font-family: var(--main-font);
-  font-weight: var(--secondary-font-weight);
-  font-size: 16px;
-  letter-spacing: 0.03em;
-  line-height: 1.18;
+  @include font(16px, 400, 1.18);
   text-align: center;
   color: var(--text-color);
   margin-bottom: 16px;
