--- a/sass/layout/_portfolio-btn.scss
+++ b/sass/layout/_portfolio-btn.scss
@@ -9,11 +9,8 @@
 }
 .menu-btn {
   font-family: var(--main-font);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
+  @include font(16px, 500, 1.62);
   text-align: center;
-  letter-spacing: 0.03em;
   color: var(--title-color);
   background-color: #f5f4fa;
   border: none;
