--- a/sass/layout/_portfolio-projects.scss
+++ b/sass/layout/_portfolio-projects.scss
@@ -36,10 +36,7 @@
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   font-family: var(--main-font);
-  font-weight: var(--secondary-font-weight);
-  font-size: 18px;
-  line-height: 1.5;
-  letter-spacing: 0.03em;
+  @include font(18px, 400, 1.5);
   color: #ffffff;
   background-color: rgba(33, 150, 243, 0.9);
   padding: 63px 24px;
@@ -63,18 +60,12 @@
 }
 .project {
   background: #ffffff;
-  font-weight: 700;
-  font-size: 18px;
-  letter-spacing: 0.06em;
-  line-height: 2;
+  @include font(18px, 700, 2, 0.06em);
   text-align: left;
   color: var(--title-color);
 }
 .project-type {
-  font-weight: var(--secondary-font-weight);
-  font-size: 16px;
-  letter-spacing: 0.03em;
-  line-height: 1.87;
+  @include font(16px, 400, 1.87);
   text-align: left;
   color: var(--text-color);
 }
