--- a/css/main.css
+++ b/css/main.css
@@ -68,16 +68,16 @@ img {
 }
 
 .modal-btn {
-  width: 200px;
+  min-width: 200px;
   height: 50px;
-  padding: 10 32;
+  padding: 10px 32px;
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   margin-top: 30px;
   font-family: var(--main-font);
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 700;
   line-height: 1.9;
   letter-spacing: 0.06em;
   text-align: center;
