--- a/sass/components/_modal-btn.scss
+++ b/sass/components/_modal-btn.scss
@@ -1,13 +1,13 @@
 .modal-btn {
-  width: 200px;
+  min-width: 200px;
   height: 50px;
-  padding: 10 32;
+  padding: 10px 32px;
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   margin-top: 30px;
   font-family: var(--main-font);
-   @include font(16px, 400, 1.9, 0.06em);
+  @include font(16px, 700, 1.9, 0.06em);
   text-align: center;
   color: #ffffff;
   background-color: var(--accent-color);
@@ -16,8 +16,7 @@
 
   &:hover,
   &:focus {
-  color: #ffffff;
-  background-color: var(--accent-color);
+    color: #ffffff;
+    background-color: var(--accent-color);
+  }
 }
-}
-
